ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample template

Resources:


  pySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: python security group
      VpcId: vpc-0205f33279ba2c6cb
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: py-sg

  ec2Instance:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0568773882d492fc8
      InstanceType: "t2.micro"
      KeyName: "akbar-pub"
      Monitoring: true
      SecurityGroupIds: 
        - !Ref pySG
      SubnetId: subnet-0c6f1ee6f0668b740
      Tags: 
        - Key: Name
          Value: "flask-server"
      UserData: 
          Fn::Base64: |
            #!/bin/bash
            yum update -y 
            echo "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDgO9XPW9zBzzVlcY534pY6cZksLqajL5NNJGKiGuRrIsMuDXYpbJ/nA4s4SOWOmbsCH7jwEim0HLeVN6noPg/2u78DNHUu4PuA1w6JXwp6q5gUxilwLEoTOMCD9+xOPcdDs7B8bZhBrqc5tFhRLoQbAsUdHGV+FCI6dY6Jlhi/73m2/yqdSOdct2xsGkQT8RnxvTjbU9GuoEQEV6QCUQHZcByWViU+0wMVHx+XVr/rowuL0aq8hB8jHvcdfc+pDu3Yo0Bfg6ohGUyuJzFtxKL++on8uLwLBVyHjQTUPFaSeEAYlxRhMpdptJOD0NZSiI1SjPuMQGpFF2KyX7RbfG69 jnlp-agent" >>/home/ec2-user/.ssh/authorized_keys
            chown -R ec2-user:ec2-user /home/ec2-user
            su - ec2-user -c "chmod 700 /home/ec2-user/.ssh"
            su - ec2-user -c "chmod 600 /home/ec2-user/.ssh/authorized_keys"

Outputs:
  ec2IntanceIp:
    Description: Instance IP output
    Value: !GetAtt ec2Instance.PublicIp
